<resources>
    <string name="app_name">AppStallman</string>

    /* page login */
    <string name="app_title_login">Stallman</string>
    <string name="app_text_login">Veuillez Saisir vos identifiants et mots de passe svp !</string>

    /* page dsh */
    <string name="app_dsh_button_message">Mes messages</string>
    <string name="app_dsh_button_bill">Mes factures</string>

    <string name="app_id_login">Identifiant</string>
    <string name="app_mdp_login">Mot de passe</string>
    <string name="app_button_login">Se connecter</string>

    /* page message_list */
    <string name="app_title_message_list">Listes Messages</string>
    <string name="app_text_message_list">Vous pouvez consulter ici la liste de vos nouveaux messages envoyés via Stallman</string>

    /* page message_to_read */
    <string name="app_title_message">Message lecture</string>
    <string name="app_text_message_list_button">Retour à la liste</string>
    <string name="app_text_response_button">Repondre</string>
    <string name="app_text_archived_button">Archiver</string>

    /* page edit_message */
    <string name="app_edit_text_title">Titre</string>
    <string name="app_edit_text_content">Contenu</string>

    /* page edit_message */
    <string name="app_text_bill_text_name">Libelle du hors forfait</string>
    <string name="app_text_bill_list_button">Retour à la liste des factures</string>
    <string name="app_text_bill_text_value">Valeur</string>

    /* page edit_bill*/
    <string name="app_bill_lign_add_button">Ajouter une ligne hors forfait</string>
    <string name="app_bill_lign_send">Ajouter</string>

</resources>