<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBillLign">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/billListButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app_text_bill_list_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/app_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/billText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textColor="@color/app_primary"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/EditOutPackageName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:hint="@string/app_text_bill_text_name"
            android:inputType="text"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

        <EditText
            android:id="@+id/EditOutPackageValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:hint="@string/app_text_bill_text_value"
            android:inputType="text"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

        <Button
            android:id="@+id/sendOutPackageButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app_bill_lign_send"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/app_primary"
            android:textColor="@color/app_primary"
            app:strokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>